<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">
    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
>
            <LinearLayout
                android:id="@+id/llComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/commentUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_user"
                    style="@style/TextAppearance.Material3.TitleMedium" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/commentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.Material3.BodySmall" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/commentAddedOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/added_on"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.Material3.LabelSmall" />
            </LinearLayout>




        </LinearLayout>



        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_delete"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:contentDescription="@string/delete_button" />

    </FrameLayout>

</androidx.cardview.widget.CardView>